# xEditLinker

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/ports/commonlibsse-ng/: portfile.cmake  vcpkg.json
common/: xedit_linker.cpp  xedit_linker.h
src/common/: CMakeLists.txt  xedit_linker.cpp  xedit_linker.h
src/fnv/: CMakeLists.txt  main.cpp
src/fo3/: CMakeLists.txt  main.cpp
src/fo4/: CMakeLists.txt  main.cpp
src/fo4_vr/: CMakeLists.txt
src/fo4vr/: CMakeLists.txt  main.cpp
src/sf1/: CMakeLists.txt  main.cpp
src/skyrim_le/: CMakeLists.txt  main.cpp
src/skyrim_se/: CMakeLists.txt
src/skyrim_se/cmake/: AddCXXFiles.cmake  SKSEPlugin.cmake  version.rc.in
src/skyrim_se/include/: PCH.h  ui.h
src/skyrim_se/res/: SSEEditLinker.ini
src/skyrim_se/src/: main.cpp  ui.cpp
src/skyrim_vr/: CMakeLists.txt  main.cpp
src/sse/: CMakeLists.txt  PCH.h  main.cpp
src/sse/cmake/: AddCXXFiles.cmake  SKSEPlugin.cmake
src/sse/res/: nexus_description.bbcode  xEditLink.ini
src/ssevr/: CMakeLists.txt
src/tes4/: CMakeLists.txt  main.cpp
src/tes5/: CMakeLists.txt
